
\name{NEWS}
\title{NEWS file for the trtf package}

\section{Changes in Version 0.3-1 (2018-04-20)}{
  \itemize{
    \item{Some improvements in internal functions.}
    \item{Simulations with 500 (not 50) noise variables.}
    \item{Simplify likelihood evaluations based on new capabilities in
          \pkg{mlt}.}
    \item{New \code{update} argument for transformation forests.}
    \item{Update outputs (\code{scale = TRUE} in \pkg{partykit} 1.2-1).}
  }
}

\section{Changes in Version 0.3-0 (2018-01-04)}{
  \itemize{
    \item{The \pkg{trtf} package was first 
          published on CRAN.}
  }
}
