@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2018-04-18 r74618) -- "Unsuffered Consequences"
-Copyright (C) 2018 The R Foundation for Statistical Computing
+R version 3.4.3 (2017-11-30) -- "Kite-Eating Tree"
+Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -76,26 +76,26 @@ The following object is masked from 'package:rpart':
 6 -4.2362 -0.42467 -0.42467 -0.16971 -0.16971  0.15229
 > predict(st2, newdata = GBSG2[1:3,], type = "hazard")
             [,1]       [,2]       [,3]
- [1,] 7.5800e-06 5.3203e-05 5.3203e-05
- [2,] 2.9349e-05 1.5119e-04 1.5119e-04
- [3,] 7.8176e-05 3.0685e-04 3.0685e-04
- [4,] 1.5955e-04 5.0786e-04 5.0786e-04
- [5,] 2.6012e-04 7.0888e-04 7.0888e-04
- [6,] 3.5168e-04 8.5936e-04 8.5936e-04
- [7,] 4.0786e-04 9.2841e-04 9.2841e-04
- [8,] 4.1869e-04 9.1451e-04 9.1451e-04
- [9,] 3.9225e-04 8.3867e-04 8.3867e-04
-[10,] 3.4638e-04 7.3070e-04 7.3070e-04
-[11,] 2.9897e-04 6.1778e-04 6.1778e-04
-[12,] 2.6246e-04 5.1912e-04 5.1912e-04
-[13,] 2.4287e-04 4.4562e-04 4.4562e-04
-[14,] 2.4126e-04 4.0212e-04 4.0212e-04
-[15,] 2.5551e-04 3.9045e-04 3.9045e-04
-[16,] 2.8169e-04 4.1213e-04 4.1213e-04
-[17,] 3.1447e-04 4.7067e-04 4.7067e-04
-[18,] 3.4703e-04 5.7394e-04 5.7394e-04
-[19,] 3.7069e-04 7.3697e-04 7.3697e-04
-[20,] 3.7474e-04 9.8676e-04 9.8676e-04
+ [1,] 0.0000e+00 0.00000000 0.00000000
+ [2,] 2.9349e-05 0.00015119 0.00015119
+ [3,] 7.8176e-05 0.00030685 0.00030685
+ [4,] 1.5955e-04 0.00050786 0.00050786
+ [5,] 2.6012e-04 0.00070888 0.00070888
+ [6,] 3.5168e-04 0.00085936 0.00085936
+ [7,] 4.0786e-04 0.00092841 0.00092841
+ [8,] 4.1869e-04 0.00091451 0.00091451
+ [9,] 3.9225e-04 0.00083867 0.00083867
+[10,] 3.4638e-04 0.00073070 0.00073070
+[11,] 2.9897e-04 0.00061778 0.00061778
+[12,] 2.6246e-04 0.00051912 0.00051912
+[13,] 2.4287e-04 0.00044562 0.00044562
+[14,] 2.4126e-04 0.00040212 0.00040212
+[15,] 2.5551e-04 0.00039045 0.00039045
+[16,] 2.8169e-04 0.00041213 0.00041213
+[17,] 3.1447e-04 0.00047067 0.00047067
+[18,] 3.4703e-04 0.00057394 0.00057394
+[19,] 3.7069e-04 0.00073697 0.00073697
+[20,] 3.7474e-04 0.00098676 0.00098676
 > 
 > plot(st2, tp_args = list(type = "survivor"))
 > 
@@ -128,7 +128,7 @@ n1    3   4   6   7
 > cf <- coef(mlt(m, data = GBSG2))
 > coef(m1 <- mlt(m, data = GBSG2, weights = w[,1], theta = cf))
   Bs1(y)   Bs2(y)   Bs3(y)   Bs4(y)   Bs5(y)   Bs6(y) 
--5.78885 -1.02739 -1.02739 -1.02739 -0.59177 -0.31235 
+-5.78913 -1.02730 -1.02730 -1.02730 -0.59181 -0.31233 
 > coef(m2 <- mlt(m, data = GBSG2, weights = w[,2], theta = cf))
   Bs1(y)   Bs2(y)   Bs3(y)   Bs4(y)   Bs5(y)   Bs6(y) 
 -4.64957 -0.72016 -0.72016 -0.64744 -0.51526 -0.15658 
@@ -172,4 +172,4 @@ n1    3   4   6   7
 > 
 > proc.time()
    user  system elapsed 
- 41.172   0.384  41.579 
+ 48.944   0.180  49.265 
