@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2018-04-18 r74618) -- "Unsuffered Consequences"
-Copyright (C) 2018 The R Foundation for Statistical Computing
+R version 3.4.3 (2017-11-30) -- "Kite-Eating Tree"
+Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -86,26 +86,26 @@ Warning messages:
 6 -4.2362 -0.42467 -0.42467 -0.16971 -0.16971  0.15229
 > predict(st2, newdata = GBSG2[1:3,], type = "hazard")
             [,1]       [,2]       [,3]
- [1,] 7.5800e-06 5.3203e-05 5.3203e-05
- [2,] 2.9349e-05 1.5119e-04 1.5119e-04
- [3,] 7.8176e-05 3.0685e-04 3.0685e-04
- [4,] 1.5955e-04 5.0786e-04 5.0786e-04
- [5,] 2.6012e-04 7.0888e-04 7.0888e-04
- [6,] 3.5168e-04 8.5936e-04 8.5936e-04
- [7,] 4.0786e-04 9.2841e-04 9.2841e-04
- [8,] 4.1869e-04 9.1451e-04 9.1451e-04
- [9,] 3.9225e-04 8.3867e-04 8.3867e-04
-[10,] 3.4638e-04 7.3070e-04 7.3070e-04
-[11,] 2.9897e-04 6.1778e-04 6.1778e-04
-[12,] 2.6246e-04 5.1912e-04 5.1912e-04
-[13,] 2.4287e-04 4.4562e-04 4.4562e-04
-[14,] 2.4126e-04 4.0212e-04 4.0212e-04
-[15,] 2.5551e-04 3.9045e-04 3.9045e-04
-[16,] 2.8169e-04 4.1213e-04 4.1213e-04
-[17,] 3.1447e-04 4.7067e-04 4.7067e-04
-[18,] 3.4703e-04 5.7394e-04 5.7394e-04
-[19,] 3.7069e-04 7.3697e-04 7.3697e-04
-[20,] 3.7474e-04 9.8676e-04 9.8676e-04
+ [1,] 0.0000e+00 0.00000000 0.00000000
+ [2,] 2.9349e-05 0.00015119 0.00015119
+ [3,] 7.8176e-05 0.00030685 0.00030685
+ [4,] 1.5955e-04 0.00050786 0.00050786
+ [5,] 2.6012e-04 0.00070888 0.00070888
+ [6,] 3.5168e-04 0.00085936 0.00085936
+ [7,] 4.0786e-04 0.00092841 0.00092841
+ [8,] 4.1869e-04 0.00091451 0.00091451
+ [9,] 3.9225e-04 0.00083867 0.00083867
+[10,] 3.4638e-04 0.00073070 0.00073070
+[11,] 2.9897e-04 0.00061778 0.00061778
+[12,] 2.6246e-04 0.00051912 0.00051912
+[13,] 2.4287e-04 0.00044562 0.00044562
+[14,] 2.4126e-04 0.00040212 0.00040212
+[15,] 2.5551e-04 0.00039045 0.00039045
+[16,] 2.8169e-04 0.00041213 0.00041213
+[17,] 3.1447e-04 0.00047067 0.00047067
+[18,] 3.4703e-04 0.00057394 0.00057394
+[19,] 3.7069e-04 0.00073697 0.00073697
+[20,] 3.7474e-04 0.00098676 0.00098676
 > 
 > plot(st2, tp_args = list(type = "survivor"))
 > 
@@ -115,13 +115,13 @@ Warning messages:
 > 
 > simulate(st2, newdata = GBSG2[1:3,], nsim = 3)
 [[1]]
-[1] (2000, Inf]      1715.28376537624 1942.00674504635
+[1] (2000, Inf] 1715.3      1942.0     
 
 [[2]]
-[1] 1765.40158059915 (2000, Inf]      (2000, Inf]     
+[1] 1765.4      (2000, Inf] (2000, Inf]
 
 [[3]]
-[1] 969.052708339234 (2000, Inf]      640.735616330802
+[1] 969.05      (2000, Inf] 640.74     
 
 > 
 > st1 <- ctree(y ~ horTh + age + menostat + tsize + tgrade +
@@ -141,4 +141,4 @@ n1    3   4   6   7
 > 
 > proc.time()
    user  system elapsed 
-  4.720   0.320   5.034 
+  6.224   0.084   6.306 
